style(全部): 代码检查，格式化，成熟度优化